Issue 21879: **Hard to read semicolon delimited values in grid filter panel

--- a/app/Connector/packages/connector-theme/sass/var/panel/_FilterPanel.scss
+++ b/app/Connector/packages/connector-theme/sass/var/panel/_FilterPanel.scss
@@ -203,3 +203,10 @@ div.activefilter {
   float: left;
 }
 /* -- END Connector.view.Selection */
+
+ul.indent li {
+  padding-left: 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
